# agentic-air-logistics-control-plane

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.sh
airflow/: .env.example  Dockerfile  docker-compose.yml
airflow/dags/: aalcp_audit_pipeline.py
app/: logging.py  main.py  settings.py
app/agents/: __init__.py  orchestrator.py  state_graph.py
app/api/: __init__.py  routes_cases.py  routes_decisions.py  routes_graph.py  routes_ingest.py  routes_playbooks.py  routes_rag.py  routes_sandbox.py  routes_webhooks.py
app/db/: __init__.py  engine.py
app/evidence/: __init__.py  extract.py  hashing.py  store.py
app/governance/: __init__.py  approvals.py  models.py  rollback.py  state_machine.py
app/graph/: __init__.py  models.py  retrieval.py  similarity.py  store.py  traversal.py  visibility.py
app/ingestion/: __init__.py  aviationweather.py  faa_nasstatus.py  http.py  nws_alerts.py  opensky.py  registry.py
app/llm/: __init__.py  client.py
app/packets/: __init__.py  builder.py  models.py
audit_warehouse/: __init__.py  load.py  run_sql.py
docs/: DATA_SOURCES.md
rag/: __init__.py  cortex_rag.py
simulation/: README.md  __init__.py  api.py  graph_seeder.py  operational_data.py  runner.py  seeders.py
tests/: conftest.py  test_agent_non_workflow.py  test_audit_trail.py  test_bitemporal_queries.py  test_blocked_missing_evidence.py  test_determinism.py  test_evidence_gate.py  test_hybrid_ranking.py  test_playbook_aging.py  test_replay_playbook_reuse.py  test_security.py  test_traversal_multihop.py
(+55 files in other folders)
